styles/subscription.css
/* ... */
.unlimitedSubCard {
    background: transparent;
    background-image: linear-gradient(90deg, #212123, #212123), linear-gradient(180deg, #FF0C0C 20.72%, rgba(62, 66, 70, 0) 97.79%);
    background-clip: padding-box, border-box;
    background-origin: border-box;
    border: 2px solid transparent;
    /* border-radius: 30px; */
    border-bottom: 0px !important;
}



.textHour {
    font-size: 30px;
    line-height: 40px;
}

@media (max-width: 991px) and (min-width: 767px) {
    .font24 {
        font-size: 20px !important;
        line-height: 30px !important;
    }

    .w218 {
        width: 155px !important;
        margin: auto !important;
    }

    .textHour {
        font-size: 24px !important;
        line-height: 34px !important;
        font-weight: 600 !important;
    }
}

.font30 {
    font-size: 30px;
    line-height: 40px;
}

@media (max-width: 767.9px) and (min-width: 400px) {
    .font24 {
        font-size: 18px !important;
        line-height: 21px !important;
    }

    .w218 {
        width: 108px !important;
        margin: auto !important;
    }

    .font30 {
        font-size: 24px !important;
        line-height: 24px !important;
    }

    .textHour {
        font-size: 20px !important;
        line-height: 30px !important;
        font-weight: 500 !important;
    }
}

.width100 {
    width: 100px;
}

@media (max-width: 500px) {
    .font24 {
        font-size: 12px !important;
        line-height: 14px !important;
    }
}

@media (max-width: 350px) {
    .font24 {
        font-size: 11px !important;
        line-height: 12px !important;
    }
}

@media (max-width: 399.9px) {

    .w218 {
        width: 100px !important;
        margin: auto !important;
    }

    .textHour {
        font-size: 20px !important;
        line-height: 30px !important;
        font-weight: 500 !important;
    }

    .font30 {
        font-size: 24px !important;
        line-height: 24px !important;
    }
}

.recommendedBg {
    background: linear-gradient(270.93deg, #0775E6 -4.56%, #6C4AED 40.85%, #7D43EE 75.67%, #9738EF 103.16%);
}

.marginTop-20 {
    /* margin-top: -40px !important; */
    top: -20px !important;
}
.marginTopSoldOut {
    margin-top: -40px !important;
}

.hoverGradient:hover {
    background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), linear-gradient(270deg, #A83AFE 0%, #6E59FE 100%);    
}

.flipImage {
    -webkit-transform: scaleX(-1);
    transform: scaleX(-1);
    position: relative;
    margin-bottom: -8px;
}

.gradientBorder {
    background: transparent;
    background-image: linear-gradient(90deg, #151617, #151617), linear-gradient(300.3deg, #0575E6 9.6%, #FF0CF5 92.85%);
    background-clip: padding-box, border-box;
    background-origin: border-box;
    border: 2px solid transparent;
    border-radius: 40px;
}

@media (max-width: 345px) {
    .w100 {
        width: 84px !important;
    }
}

@media (min-width: 345.1px) and (max-width: 450px) {
    .w100 {
        width: 90px !important;
    } 
}

@media (min-width: 450.1px) {
    .w100 {
        width: 100px !important;
    }
}

@media (min-width: 500.1px) {
    .w100 {
        width: 130px !important;
    }
}

.w100 {
    width: 110px;
    margin: 0px 5px;
}

.font12 {
    font-size: 12px !important;
    line-height: 14px !important;
}

.font15 {
    font-size: 15px !important;
    line-height: 16px !important;
}

.font8 {
    font-size: 10px !important;
    line-height: 9px !important;
}
/* 
.slidecontainer input[type=range] {
    pointer-events: none;
} */

/* .slidecontainer input[type=range]::-webkit-slider-thumb {
    pointer-events:auto;
} */

.testimonial-group > .row {
    overflow-x: auto;
    white-space: nowrap;
    flex-wrap: nowrap;
    margin-right: 1px;
    scrollbar-width: none;
}

@media (max-width: 767px) {
    .testimonial-group > .row {
        margin-left: 0px;
      }
}

.testimonial-group > .row > .col {
    display: inline-block;
}

.testimonial-group > .row > .col-auto {
    display: inline-block;

}

.testimonial-group > .row::-webkit-scrollbar {
    width: 0px;
    height: 0px;
}

.customBlackBg {
    background-color: #151617;
}

.monterRange {
    position: absolute;
    width: auto !important;
    height: auto !important;
    padding: 5px 20px !important;
    margin-top: -50px !important;
    white-space: nowrap;
}
.discountGif {
    position: absolute;
    width: auto !important;
    height: auto !important;
    padding: 5px 20px !important;
    margin-top: -50px !important;
    white-space: nowrap;
}

/* Extra small devices (phones, 600px and down) */
@media (max-width: 600px) {
    .discountGif {
        margin-top: -40px !important;
        margin-left: 40px !important;
    }
    #discountGifunlimited {
        margin-left:-250px !important;
        position: absolute;
        width: auto !important;
        height: auto !important;
        padding: 5px 20px !important;
        margin-top: -40px !important;
        white-space: nowrap;
    }
}



/* Small devices (portrait tablets and large phones, 600px and up) */
@media (min-width: 600px) {
    .discountGif {
        margin-top: -55px !important;
    }
    #discountGifunlimited {
        margin-left:-270px !important;
        position: absolute;
        width: auto !important;
        height: auto !important;
        padding: 5px 20px !important;
        margin-top: -55px !important;
        white-space: nowrap;
    }
}

/* Medium devices (landscape tablets, 768px and up) */
@media (min-width: 768px) {
    .discountGif {
        margin-top: -55px !important;
    }
    #discountGifunlimited {
        margin-left:-300px !important;
        position: absolute;
        width: auto !important;
        height: auto !important;
        padding: 5px 20px !important;
        margin-top: -50px !important;
        white-space: nowrap;
    }
}
/* ... */

